--- a/Soft/Pages/_ViewImports.cshtml
+++ b/Soft/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
 @using Soft
-@using Soft.Data
+@using Autokool.Infra
 @namespace Soft.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
