CoursePage tootab aga vaja muuta

--- a/Soft/Areas/Administrator/Pages/Courses/Create.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/Create.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
+@using Autokool.Pages.Common.Extensions
 @model Autokool.Pages.Autokool.CoursesPage
+
 @{
     Layout = "_Create";
-    ViewData["Title"] = Model.PageTitle;
 }
+
+<partial name="_EditCourse" />
