--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Autokool.Pages.Common.Extensions
+@using Autokool.Pages.Common.Aids
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,8 +27,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Courses" asp-page="/Index" asp-page-handler="index">Courses</a>
+                            <a class="nav-link text-dark" asp-area="Administrator" asp-page="/Courses/Index" asp-page-handler="index">Courses</a>
                         </li>
+                        @*@Html.DropMenu("Admin",
+                       new Link("Courses", new Uri("/Administrator/Courses/Index?handler=index", UriKind.Relative)))*@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
