--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -29,8 +29,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Administrator" asp-page="/Courses/Index" asp-page-handler="index">Courses</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Administrator" asp-page="/Exams/Index" asp-page-handler="index">Exams</a>
+                        </li>
                         @*@Html.DropMenu("Admin",
-                       new Link("Courses", new Uri("/Administrator/Courses/Index?handler=index", UriKind.Relative)))*@
+        new Link("Courses", new Uri("/Administrator/Courses/Index?handler=index", UriKind.Relative)))*@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
