--- a/Soft/Areas/Administrator/Pages/Courses/_EditCourse.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/_EditCourse.cshtml
@@ -3,8 +3,8 @@
 
 <body>
     @Html.Editor(m => m.Item.ID)
-    @Html.Editor(m => m.Item.CourseTypeID)
-    @Html.Editor(m => m.Item.CourseName)
+    @Html.Editor(m => m.Item.Name)
+    @Html.DropDown(m => m.Item.CourseTypeID, Model.CourseTypes)
     @Html.Editor(m => m.Item.Location)
     @Html.Editor(m => m.Item.ValidFrom)
     @Html.Editor(m => m.Item.ValidTo)
