ExamType DropDown tootab

--- a/Soft/Areas/Administrator/Pages/Exams/_EditExam.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/_EditExam.cshtml
@@ -3,8 +3,8 @@
 
 <body>
     @Html.Editor(m => m.Item.ID)
-    @Html.Editor(m => m.Item.ExamTypeID)
-    @Html.Editor(m => m.Item.ExamName)
+    @Html.Editor(m => m.Item.Name)
+    @Html.DropDown(m => m.Item.ExamTypeID, Model.ExamTypes)
     @*@Html.Editor(m => m.Item.Passed)*@
     @Html.Editor(m => m.Item.ValidFrom)
     @Html.Editor(m => m.Item.ValidTo)
