--- a/Soft/Areas/Administrator/Pages/Exams/_ShowExam.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/_ShowExam.cshtml
@@ -3,8 +3,8 @@
 
 <body>
     @Html.Show(m => m.Item.ID)
-    @Html.Show(m => m.Item.ExamTypeID)
-    @Html.Show(m => m.Item.ExamName)
+    @Html.Show(m => m.Item.Name)
+    @Html.Show(m => m.Item.ExamTypeID, Model.ExamTypeName(Model.Item.ExamTypeID))
     @*@Html.Show(m => m.Item.Passed)*@
     @Html.Show(m => m.Item.ValidFrom)
     @Html.Show(m => m.Item.ValidTo)
