--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Student" asp-page="/Courses/Index" asp-page-handler="index">CoursesStudent</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Administrator" asp-page="/CourseTypes/Index" asp-page-handler="index">Course Types</a>
+                        </li>
                         @*@Html.DropMenu("Admin",
         new Link("Courses", new Uri("/Administrator/Courses/Index?handler=index", UriKind.Relative)))*@
                     </ul>
