--- a/Soft/Areas/Administrator/Pages/Courses/Create.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/Create.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
-@using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.CoursesPage
+@model Autokool.Pages.Autokool.Administrator.CoursesAdminPage
 
 @{
     Layout = "_Create";
