--- a/Soft/Areas/Administrator/Pages/Courses/Delete.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.CoursesPage
+@model Autokool.Pages.Autokool.Administrator.CoursesAdminPage
 
 @{ Layout = "_Delete"; }
 
