--- a/Soft/Areas/Administrator/Pages/ExamTypes/_ShowExamType.cshtml
+++ b/Soft/Areas/Administrator/Pages/ExamTypes/_ShowExamType.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.ExamTypesPage
+@model Autokool.Pages.Autokool.Administrator.ExamTypesAdminPage
 
 <body>
     @Html.Show(m => m.Item.ID)
