--- a/Soft/Areas/Administrator/Pages/Exams/Create.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.ExamsPage
+@model Autokool.Pages.Autokool.Administrator.ExamsAdminPage
 
 @{
     Layout = "_Create";
