--- a/Soft/Areas/Administrator/Pages/Exams/Delete.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.ExamsPage
+@model Autokool.Pages.Autokool.Administrator.ExamsAdminPage
 
 @{ Layout = "_Delete"; }
 
