--- a/Soft/Areas/Administrator/Pages/CourseTypes/Edit.cshtml
+++ b/Soft/Areas/Administrator/Pages/CourseTypes/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.CourseTypesPage
+@model Autokool.Pages.Autokool.Administrator.CourseTypesAdminPage
 
 @{
     Layout = "_Edit";
