--- a/Soft/Areas/Administrator/Pages/CourseTypes/_EditCourseType.cshtml
+++ b/Soft/Areas/Administrator/Pages/CourseTypes/_EditCourseType.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.CourseTypesPage
+@model Autokool.Pages.Autokool.Administrator.CourseTypesAdminPage
 
 <body>
     @Html.Editor(m => m.Item.ID)
