--- a/Soft/Areas/Administrator/Pages/Courses/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/Index.cshtml
@@ -2,7 +2,7 @@
 @using Autokool.Pages.Common.Aids
 @using Autokool.Pages.Common.Consts
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.CoursesPage
+@model Autokool.Pages.Autokool.Administrator.CoursesAdminPage
 
 @{
     Layout = "_Index";
