--- a/Soft/Areas/Administrator/Pages/Courses/_ShowCourse.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/_ShowCourse.cshtml
@@ -1,8 +1,7 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.CoursesPage
+@model Autokool.Pages.Autokool.Administrator.CoursesAdminPage
 
 <body>
-    @Html.Show(m => m.Item.ID)
     @Html.Show(m => m.Item.Name)
     @Html.Show(m => m.Item.CourseTypeID, Model.CourseTypeName(Model.Item.CourseTypeID))
     @Html.Show(m => m.Item.Location)
