--- a/Soft/Areas/Administrator/Pages/ExamTypes/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/ExamTypes/Index.cshtml
@@ -2,7 +2,7 @@
 @using Autokool.Pages.Common.Aids
 @using Autokool.Pages.Common.Consts
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.ExamTypesPage
+@model Autokool.Pages.Autokool.Administrator.ExamTypesAdminPage
 
 @{
     Layout = "_Index";
