--- a/Soft/Areas/Student/Pages/Courses/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Index.cshtml
@@ -2,50 +2,14 @@
 @using Autokool.Pages.Common.Aids
 @using Autokool.Pages.Common.Consts
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.CoursesPage
+@model Autokool.Pages.Autokool.Student.CoursesStudentPage
 
 @{
-    Layout = "_Layout";
+    Layout = "_Index";
     var page = Model.PageUrl;
-    ViewData["Title"] = Model.PageTitle;
-    int pageIndex = Model.PageIndex;
-    int totalPages = Model.TotalPages;
-    string fixedFilter = Model.FixedFilter;
-    string fixedValue = Model.FixedValue;
-    string sortOrder = Model.SortOrder;
-    string searchString = Model.SearchString;
-    string currentFilter = Model.CurrentFilter;
-    Uri pageUrl = new Uri("/Student/Courses", UriKind.Relative);
-    var a = new Args(pageUrl, null, fixedFilter, fixedValue
-        , sortOrder, searchString, pageIndex, currentFilter);
-
 }
 
-<form id="indexForm" asp-page="./Index" method="get">
-    <input type="hidden" name="FixedFilter" value="@Model.FixedFilter" />
-    <input type="hidden" name="FixedValue" value="@Model.FixedValue" />
-    <input type="hidden" name="Handler" value="Index" />
-    <div class="form-inline">
-        <p>
-            Find by:
-            &nbsp;
-            <input id="searchTextBox" class="form-control" type="text" name="SearchString" value="@Model.SearchString" />
-            &nbsp;
-            <input id="searchButton" type="submit" value="Search" class="btn btn-light" />
-            &nbsp;
-            <a id="backToList" asp-page="./Index"
-               asp-route-handler="Index"
-               asp-route-sortorder="@Model.SortOrder"
-               asp-route-fixedFilter="@Model.FixedFilter"
-               asp-route-fixedValue="@Model.FixedValue">Back to Full List</a>
-        </p>
-    </div>
+@section Create {
+}
 
-    <div class="form-inline">
-
-        @Html.NavButtons(a, totalPages)
-
-    </div>
-</form>
-
-@Html.ShowTableNoEdit(Model)
+@Html.ShowTable(Model, null, null, "Register", null)
