--- a/Soft/Areas/Student/Pages/Courses/_ShowCourse.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/_ShowCourse.cshtml
@@ -1,2 +1,2 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.CoursesPage
+@model Autokool.Pages.Autokool.Student.CoursesStudentPage
