Exam Student view / vaja teha veel register nupp

--- a/Soft/Areas/Student/Pages/Exams/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Exams/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.Student.CoursesStudentPage
+@model Autokool.Pages.Autokool.Student.ExamsStudentPage
 
 @{
     Layout = "_Index";
