Profiili moodi asi/ edit ei toota ja full name vaja korda saada

--- a/Soft/Areas/Administrator/Pages/CourseTypes/Edit.cshtml
+++ b/Soft/Areas/Administrator/Pages/CourseTypes/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.Administrator.CourseTypesAdminPage
+@model Autokool.Pages.Autokool.Admin.CourseTypesAdminPage
 
 @{
     Layout = "_Edit";
