--- a/Soft/Areas/Administrator/Pages/Courses/Edit.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.Administrator.CoursesAdminPage
+@model Autokool.Pages.Autokool.Admin.CoursesAdminPage
 
 @{
     Layout = "_Edit";
