--- a/Soft/Areas/Administrator/Pages/ExamTypes/Edit.cshtml
+++ b/Soft/Areas/Administrator/Pages/ExamTypes/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.Administrator.ExamTypesAdminPage
+@model Autokool.Pages.Autokool.Admin.ExamTypesAdminPage
 
 @{
     Layout = "_Edit";
