--- a/Soft/Areas/Administrator/Pages/ExamTypes/_EditExamType.cshtml
+++ b/Soft/Areas/Administrator/Pages/ExamTypes/_EditExamType.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.Administrator.ExamTypesAdminPage
+@model Autokool.Pages.Autokool.Admin.ExamTypesAdminPage
 
 <body>
     @Html.Editor(m => m.Item.ID)
