--- a/Soft/Areas/Administrator/Pages/Exams/Details.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Autokool.Pages.Autokool.Administrator.ExamsAdminPage
+@model Autokool.Pages.Autokool.Admin.ExamsAdminPage
 
 @{ Layout = "_Details"; }
 
