--- a/Soft/Areas/Administrator/Pages/Exams/_EditExam.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/_EditExam.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.Administrator.ExamsAdminPage
+@model Autokool.Pages.Autokool.Admin.ExamsAdminPage
 
 <body>
     @Html.Editor(m => m.Item.ID)
