--- a/Soft/Areas/Student/Pages/Students/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Students/Index.cshtml
@@ -2,7 +2,7 @@
 @using Autokool.Pages.Common.Aids
 @using Autokool.Pages.Common.Consts
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.Admin.CoursesAdminPage
+@model Autokool.Pages.Autokool.Students.StudentsPage
 
 @{
     Layout = "_Index";
