--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
                              )
                         @Html.DropMenu("Student",
                              new Link("Courses", new Uri("/Student/Courses/Index?handler=index", UriKind.Relative)),
-                             new Link("Exams", new Uri("/Student/Exams/Index?handler=index", UriKind.Relative))
+                             new Link("Exams", new Uri("/Student/Exams/Index?handler=index", UriKind.Relative)),
+                             new Link("My Data", new Uri("/Student/Students/Index?handler=index", UriKind.Relative))
                              )
                     </ul>
                     <partial name="_LoginPartial" />
