--- a/Soft/Areas/Administrator/Pages/CourseTypes/Create.cshtml
+++ b/Soft/Areas/Administrator/Pages/CourseTypes/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.Administrator.CourseTypesAdminPage
+@model Autokool.Pages.Autokool.Admin.CourseTypesAdminPage
 
 @{
     Layout = "_Create";
