--- a/Soft/Areas/Administrator/Pages/CourseTypes/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/CourseTypes/Index.cshtml
@@ -2,7 +2,7 @@
 @using Autokool.Pages.Common.Aids
 @using Autokool.Pages.Common.Consts
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.Administrator.CourseTypesAdminPage
+@model Autokool.Pages.Autokool.Admin.CourseTypesAdminPage
 @{
     Layout = "_Index";
     var page = Model.PageUrl;
