--- a/Soft/Areas/Administrator/Pages/Courses/_EditCourse.cshtml
+++ b/Soft/Areas/Administrator/Pages/Courses/_EditCourse.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Autokool.Pages.Common.Extensions;
-@model Autokool.Pages.Autokool.Administrator.CoursesAdminPage
+@model Autokool.Pages.Autokool.Admin.CoursesAdminPage
 
 <body>
     @*@Html.Editor(m => m.Item.ID)*@
