--- a/Soft/Areas/Administrator/Pages/Exams/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/Exams/Index.cshtml
@@ -2,7 +2,7 @@
 @using Autokool.Pages.Common.Aids
 @using Autokool.Pages.Common.Consts
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.Administrator.ExamsAdminPage
+@model Autokool.Pages.Autokool.Admin.ExamsAdminPage
 
 @{
     Layout = "_Index";
