--- a/Soft/Areas/Student/Pages/Courses/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Autokool.Pages.Common.Extensions
-@model Autokool.Pages.Autokool.Student.CoursesStudentPage
+@model Autokool.Pages.Autokool.Students.CoursesStudentPage
 
 @{
     Layout = "_Index";
