--- a/Soft/Areas/Student/Pages/Students/_EditStudent.cshtml
+++ b/Soft/Areas/Student/Pages/Students/_EditStudent.cshtml
@@ -2,6 +2,7 @@
 @model Autokool.Pages.Autokool.Students.StudentsPage
 
 <body>
+    @Html.Editor(m => m.Item.ID)
     @Html.Editor(m => m.Item.FirstName)
     @Html.Editor(m => m.Item.LastName)
     @Html.DropDown(m => m.Item.CourseID, Model.Courses)
