--- a/Soft/Areas/Student/Pages/Students/_EditStudent.cshtml
+++ b/Soft/Areas/Student/Pages/Students/_EditStudent.cshtml
@@ -9,4 +9,5 @@
     @Html.Editor(m => m.Item.ValidFrom)
     @Html.Editor(m => m.Item.ValidTo)
     @Html.Editor(m => m.Item.Email)
+    @Html.Editor(m => m.Item.PhoneNr)
 </body>
