--- a/Soft/Areas/Student/Pages/Students/_ShowStudent.cshtml
+++ b/Soft/Areas/Student/Pages/Students/_ShowStudent.cshtml
@@ -5,7 +5,6 @@
     @Html.Show(m => m.Item.FirstName)
     @Html.Show(m => m.Item.LastName)
     @Html.Show(m => m.Item.CourseID, Model.CourseName(Model.Item.CourseID))
-    @Html.Show(m => m.Item.ValidFrom)
-    @Html.Show(m => m.Item.ValidTo)
     @Html.Show(m => m.Item.Email)
+    @Html.Show(m => m.Item.PhoneNr)
 </body>
