proovisin registreerides Studenti andmebaasi lisada, kuid ei  saanud hakkama + StudentCoursesile on lisatud registreerimine

--- a/Soft/Areas/Student/Pages/Courses/Details.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Details.cshtml
@@ -1,1 +1,8 @@
-﻿
+﻿@page
+@model Autokool.Pages.Autokool.Students.CoursesStudentPage
+
+@{ Layout = "_DetailsStudent";}
+
+<partial name="_ShowCourse" />
+
+@section Details {}
