--- a/Soft/Areas/Student/Pages/Exams/Edit.cshtml
+++ b/Soft/Areas/Student/Pages/Exams/Edit.cshtml
@@ -1,8 +1,6 @@
 ﻿@page
-@model Autokool.Pages.Autokool.Admin.CoursesAdminPage
+@model Autokool.Pages.Autokool.Students.ExamsStudentPage
 
 @{
     Layout = "_ConfirmCancellation";
 }
-
-
