--- a/Soft/Areas/Student/Pages/Exams/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Exams/Index.cshtml
@@ -5,8 +5,7 @@
 @{
     Layout = "_Index";
     var page = Model.PageUrl;
-    string reg = "Register";
-    bool isRegistered = Model.registered;
+    string reg = "";
 }
 
 @section Create {
