--- a/Soft/Areas/Student/Pages/Courses/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Index.cshtml
@@ -5,9 +5,19 @@
 @{
     Layout = "_Index";
     var page = Model.PageUrl;
+    string reg = "";
 }
 
 @section Create {
 }
 
-@Html.ShowTable(Model, null, null, "Register", null)
+@if (Model.IsRegistered)
+{
+    reg = "Cancel registration";
+    @Html.ShowTable(Model, null, reg, null, null)
+}
+else
+{
+    reg = "Register";
+    @Html.ShowTable(Model, null, null, reg, null)
+}
