Driving Pracitce admin vaade TODO student vaade ja registreerimis nupp

--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                              new Link("Courses", new Uri("/Administrator/Courses/Index?handler=index", UriKind.Relative)),
                              new Link("Exams", new Uri("/Administrator/Exams/Index?handler=index", UriKind.Relative)),
                              new Link("Course Types", new Uri("/Administrator/CourseTypes/Index?handler=index", UriKind.Relative)),
+                             new Link("Driving practice reservation", new Uri("/Administrator/DrivingPractices/Index?handler=index", UriKind.Relative)),
                              new Link("Exam Types", new Uri("/Administrator/ExamTypes/Index?handler=index", UriKind.Relative))
                              )
                         @Html.DropMenu("Student",
