DrivingPractice students page + course exam ja driving practice view ValidFrom ja To parandus

--- a/Soft/Areas/Student/Pages/Exams/_ShowExam.cshtml
+++ b/Soft/Areas/Student/Pages/Exams/_ShowExam.cshtml
@@ -3,5 +3,6 @@
 
 <body>
     @Html.Show(m => m.Item.Name)
+    @Html.Show(m => m.Item.ExamTypeID, Model.ExamTypeName(Model.Item.ExamTypeID))
     @Html.Show(m => m.Item.ValidTo)
 </body>
