--- a/Soft/Areas/Student/Pages/Courses/_ShowCourse.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/_ShowCourse.cshtml
@@ -3,5 +3,7 @@
 
 <body>
     @Html.Show(m => m.Item.Name)
+    @Html.Show(m => m.Item.CourseTypeID, Model.CourseTypeName(Model.Item.CourseTypeID))
+    @Html.Show(m => m.Item.Location)
     @Html.Show(m => m.Item.ValidTo)
 </body>
