--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                              new Link("Exams", new Uri("/Administrator/Exams/Index?handler=index", UriKind.Relative)),
                              new Link("Course Types", new Uri("/Administrator/CourseTypes/Index?handler=index", UriKind.Relative)),
                              new Link("Driving practice reservation", new Uri("/Administrator/DrivingPractices/Index?handler=index", UriKind.Relative)),
+                             new Link("Teachers", new Uri("/Administrator/Teachers/Index?handler=index", UriKind.Relative)),
                              new Link("Exam Types", new Uri("/Administrator/ExamTypes/Index?handler=index", UriKind.Relative))
                              )
                         @Html.DropMenu("Student",
