--- a/Soft/Areas/Student/Pages/Students/_EditStudent.cshtml
+++ b/Soft/Areas/Student/Pages/Students/_EditStudent.cshtml
@@ -4,7 +4,7 @@
 <body>
     @Html.Editor(m => m.Item.ID)
     @Html.Editor(m => m.Item.FirstName)
-    @Html.Editor(m => m.Item.LastName)
+    @Html.Editor(m => m.Item.Name)
     @Html.DropDown(m => m.Item.CourseID, Model.Courses)
     @Html.Editor(m => m.Item.ValidFrom)
     @Html.Editor(m => m.Item.ValidTo)
