Rollid kasutajatele/ rollide lisamine ei toota peab tegema manuaalselt hetkel

--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                              new Link("Course Types", new Uri("/Administrator/CourseTypes/Index?handler=index", UriKind.Relative)),
                              new Link("Driving practice reservation", new Uri("/Administrator/DrivingPractices/Index?handler=index", UriKind.Relative)),
                              new Link("Teachers", new Uri("/Administrator/Teachers/Index?handler=index", UriKind.Relative)),
+                             new Link("Manage roles", new Uri("/Administrator/RoleManager/Index?handler=index", UriKind.Relative)),
                              new Link("Exam Types", new Uri("/Administrator/ExamTypes/Index?handler=index", UriKind.Relative))
                              )
                         @Html.DropMenu("Student",
