--- a/Soft/Areas/Administrator/Pages/UserRoles/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/UserRoles/Index.cshtml
@@ -1,21 +1,20 @@
 ﻿@page
+@using Autokool.Pages.Common.Extensions;
 @model Autokool.Pages.Autokool.Admin.UserRolesAdminPage
 
 @{
-    Layout = "_Layout";
+    Layout = "_Index";
 }
-<h1>User Roles</h1>
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Roles</th>
+            <th>@Html.Show(m => m.Item.FirstName)</th>
+            <th>@Html.Show(m => m.Item.LastName)</th>
+            <th>@Html.Show(m => m.Item.Email)</th>
+            <th>@Html.Show(m => m.Item.Roles)</th>
             <th>Action</th>
         </tr>
     </thead>
-
     <tbody>
         @foreach (var user in Model.usersData)
         {
@@ -31,3 +30,6 @@
         }
     </tbody>
 </table>
+@section Create {
+    
+}
