--- a/Soft/Areas/Administrator/Pages/UserRoles/Manage.cshtml
+++ b/Soft/Areas/Administrator/Pages/UserRoles/Manage.cshtml
@@ -1,33 +1,45 @@
 ﻿@page
+@using Autokool.Pages.Common.Aids
+@using Autokool.Pages.Common.Extensions
 @model Autokool.Pages.Autokool.Admin.UserRolesAdminPage
 
 @{ Layout = "_Layout"; }
 
-<form  method="post">
+<form method="post">
     <div class="card">
         <div class="card-header">
             <h2>Manage User Roles</h2>
             Add/Remove Roles for User
         </div>
         <div class="card-body">
-            @for (int i = 0; i < Model.model.Count; i++)
+            @foreach (var role in Model.UserRolesList)
             {
-            <div class="form-check m-1">
-                <input type="hidden" asp-for="@Model.manageUserRolesData.RoleId[i]" />
-                <input type="hidden" asp-for="@Model.manageUserRolesData.RoleName[i]" />
-                <input asp-for="@Model.manageUserRolesData.Selected" class="form-check-input" />
-                <label class="form-check-label" asp-for="@Model.manageUserRolesData.Selected">
-                    @Model.manageUserRolesData.RoleName
-                </label>
-            </div>
+                <div class="form-check m-1">
+                    <input type="hidden" asp-for=@role.RoleId />
+                    <input type="hidden" asp-for="@role.RoleName" />
+                    <input asp-for="@role.Selected" class="form-check-input" />
+                    <label class="form-check-label" asp-for="@role.Selected">
+                        @role.RoleName
+                    </label>
+                </div>
             }
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
         <div class="card-footer">
             <input type="submit" value="Update" class="btn btn-primary"
                    style="width:auto" />
-            <a asp-action="EditUser" asp-route-id="@ViewBag.userId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
+            @Html.BackTo(
+           new Args(
+               null,
+               null,
+               Model.FixedFilter,
+               Model.FixedValue,
+               Model.SortOrder,
+               Model.SearchString,
+               Model.PageIndex))
+
         </div>
+    </div>
+    <div>
     </div>
 </form>
