--- a/Soft/Areas/Administrator/Pages/UserRoles/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/UserRoles/Index.cshtml
@@ -16,7 +16,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var user in Model.usersData)
+        @foreach (var user in Model.usersDataList)
         {
             <tr>
                 <td>@user.FirstName</td>
