kui teacherit editida voi kustutada, siis kajasutb see ka userroles lehel ja tabelites

--- a/Soft/Areas/Administrator/Pages/Teachers/Edit.cshtml
+++ b/Soft/Areas/Administrator/Pages/Teachers/Edit.cshtml
@@ -2,7 +2,7 @@
 @model Autokool.Pages.Autokool.Admin.TeachersAdminPage
 
 @{
-    Layout = "_Edit";
+    Layout = "_EditTeacher";
 }
 
 <partial name="_EditTeacher" />
