Viimased lihvid teacherAdminPagele ning personViews emailile

--- a/Soft/Areas/Administrator/Pages/Teachers/Edit.cshtml
+++ b/Soft/Areas/Administrator/Pages/Teachers/Edit.cshtml
@@ -2,8 +2,7 @@
 @model Autokool.Pages.Autokool.Admin.TeachersAdminPage
 
 @{
-    Layout = "_EditTeacher";
+    Layout = "_EditTeachers";
 }
 
 <partial name="_EditTeacher" />
-
