--- a/Soft/Pages/Shared/_EditTeachers.cshtml
+++ b/Soft/Pages/Shared/_EditTeachers.cshtml
@@ -15,7 +15,7 @@
     <div class="col-md-4">
         <form id="editForm"
               asp-page-handler="Edit"
-              asp-route-id="@Model.id"
+              asp-route-id="@Model.UserId"
               asp-route-sortorder="@Model.SortOrder"
               asp-route-fixedFilter="@Model.FixedFilter"
               asp-route-fixedValue="@Model.FixedValue"
