--- a/Soft/Areas/Administrator/Pages/Teachers/_EditTeacher.cshtml
+++ b/Soft/Areas/Administrator/Pages/Teachers/_EditTeacher.cshtml
@@ -4,7 +4,7 @@
 <body>
     @Html.Editor(m => m.Item.ID)
     @Html.Editor(m => m.Item.FirstName)
-    @Html.Editor(m => m.Item.Name)
+    @Html.Editor(m => m.Item.LastName)
     @Html.Editor(m => m.Item.Email)
     @Html.Editor(m => m.Item.PhoneNr)
     @Html.Editor(m => m.Item.ValidFrom)
