--- a/Soft/Pages/Shared/_ConfirmCancellationCourse.cshtml
+++ b/Soft/Pages/Shared/_ConfirmCancellationCourse.cshtml
@@ -25,6 +25,7 @@
               asp-route-fixedFilter="@Model.FixedFilter"
               asp-route-fixedValue="@Model.FixedValue"
               asp-route-pageIndex="@Model.PageIndex"
+              asp-route-id="@itemId"
               method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
