--- a/Soft/Pages/Shared/_DetailsStudent.cshtml
+++ b/Soft/Pages/Shared/_DetailsStudent.cshtml
@@ -17,17 +17,25 @@
         @RenderBody()
     </dl>
 </div>
+<div class="row">
+    <div class="col-md-4">
+        <form id="createForm"
+              asp-page-handler="Register"
+              asp-route-sortorder="@Model.SortOrder"
+              asp-route-fixedFilter="@Model.FixedFilter"
+              asp-route-fixedValue="@Model.FixedValue"
+              asp-route-pageIndex="@Model.PageIndex"
+              asp-route-id="@itemId"
+              method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            @RenderBody()
+
+            <input id="createButton" type="submit" value="Create" class="btn btn-primary" />
+        </form>
+    </div>
+</div>
 <div>
-    <a 
-       id="button"
-       asp-page="./Index"
-       asp-route-handler="Index"
-       asp-route-sortorder="@Model.SortOrder"
-       asp-route-fixedFilter="@Model.FixedFilter"
-       asp-route-fixedValue="@Model.FixedValue"
-       asp-route-pageIndex="@Model.PageIndex"
-       asp-route-IsRegistered="@Model.IsRegistered"
-       asp-route-id="@itemId">Confirm</a> |
 
     @Html.BackTo(
         new Args(
