Isregistered onPostEdititil ei toota

--- a/Soft/Pages/Shared/_ConfirmCancellationCourse.cshtml
+++ b/Soft/Pages/Shared/_ConfirmCancellationCourse.cshtml
@@ -30,7 +30,7 @@
 <div class="row">
     <div class="col-md-4">
         <form id="createForm"
-              asp-page-handler="Details"
+              asp-page-handler="Edit"
               asp-route-sortorder="@Model.SortOrder"
               asp-route-fixedFilter="@Model.FixedFilter"
               asp-route-fixedValue="@Model.FixedValue"
