Baas registerdata ning eraldi RegisterCourse

--- a/Soft/Areas/Student/Pages/Courses/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Index.cshtml
@@ -21,7 +21,7 @@ else
     reg = "Register";
     @Html.ShowTable(Model, null, null, reg, null)
 }*@
-@if (Model.register1.IsRegisteredCourse)
+@if (Model._registerCourse.IsRegisteredCourse)
 {
     reg = "Cancel registration";
     @Html.ShowTable(Model, null, reg, null, null)
