Examile Registreeritud page samuti olemas/ vaja teha testid + puhtamaks

--- a/Soft/Areas/Student/Pages/Courses/Edit.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Edit.cshtml
@@ -2,6 +2,6 @@
 @model Autokool.Pages.Autokool.Students.CoursesStudentPage
 
 @{
-    Layout = "_ConfirmCancellationCourse";
+    Layout = "_ConfirmCancellation";
 }
 <partial name="_ShowCourse" />
