--- a/Soft/Pages/Shared/_ConfirmCancellationCourse.cshtml
+++ b/Soft/Pages/Shared/_ConfirmCancellationCourse.cshtml
@@ -11,7 +11,7 @@
 </p>
 
 <div>
-    <h4>Confirm Course Cancellation</h4>
+    <h4>Confirm Cancellation</h4>
     <hr />
     <dl class="row">
         @RenderBody()
