--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
                              new Link("Teachers", new Uri("/Administrator/Teachers/Index?handler=index", UriKind.Relative)),
                              new Link("Manage roles", new Uri("/Administrator/RoleManager/Index?handler=index", UriKind.Relative)),
                              new Link("User roles", new Uri("/Administrator/UserRoles/Index?handler=index", UriKind.Relative)),
-                             new Link("Registered users", new Uri("/Administrator/Registered/Index?handler=index", UriKind.Relative)),
+                             new Link("Users registered for Courses", new Uri("/Administrator/RegisterCourse/Index?handler=index", UriKind.Relative)),
+                             new Link("Users registered for Exams", new Uri("/Administrator/RegisterExam/Index?handler=index", UriKind.Relative)),
                              new Link("Exam Types", new Uri("/Administrator/ExamTypes/Index?handler=index", UriKind.Relative))
                              )
                         @Html.DropMenu("Student",
