--- a/Soft/Areas/Student/Pages/Courses/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Courses/Index.cshtml
@@ -11,7 +11,7 @@
 @section Create {
 }
 
-@if (Model._registerCourse.IsRegisteredCourse)
+@if (Model._registerCourse.IsRegistered)
 {
     reg = "Cancel registration";
     @Html.ShowTable(Model, null, reg, null, null)
