--- a/Soft/Areas/Student/Pages/Exams/Index.cshtml
+++ b/Soft/Areas/Student/Pages/Exams/Index.cshtml
@@ -11,7 +11,7 @@
 @section Create {
 }
 
-@if (Model._registerExam.IsRegisteredCourse)
+@if (Model._registerExam.IsRegistered)
 {
     reg = "Cancel registration";
     @Html.ShowTable(Model, null, reg, null, null)
