DrivingPracticeile ka register nupp toole

--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                              new Link("User roles", new Uri("/Administrator/UserRoles/Index?handler=index", UriKind.Relative)),
                              new Link("Users registered for Courses", new Uri("/Administrator/RegisterCourse/Index?handler=index", UriKind.Relative)),
                              new Link("Users registered for Exams", new Uri("/Administrator/RegisterExam/Index?handler=index", UriKind.Relative)),
+                             new Link("Users registered for Driving Practices", new Uri("/Administrator/RegisterDrivingPractice/Index?handler=index", UriKind.Relative)),
                              new Link("Exam Types", new Uri("/Administrator/ExamTypes/Index?handler=index", UriKind.Relative))
                              )
                         @Html.DropMenu("Student",
