--- a/Soft/Areas/Student/Pages/DrivingPractices/Index.cshtml
+++ b/Soft/Areas/Student/Pages/DrivingPractices/Index.cshtml
@@ -11,7 +11,7 @@
 @section Create {
 }
 
-@if (Model.IsRegistered)
+@if (Model._registerDrivingPractice.IsRegistered)
 {
     reg = "Cancel registration";
     @Html.ShowTable(Model, null, reg, null, null)
