--- a/Soft/Areas/Administrator/Pages/RoleManager/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/RoleManager/Index.cshtml
@@ -5,17 +5,14 @@
     Layout = "_Layout";
 }
 <h1>Role Manager</h1>
-@*<form method="post" asp-area="" asp-page="/Index">
+@*<form method="post" asp-page-handler="Create">
     <div class="input-group">
         <input name="roleName" class="form-control w-25">
         <span class="input-group-btn">
             <button class="btn btn-info">Add New Role</button>
         </span>
     </div>
-</form>
-<p>
-    <a asp-page="Create">Add</a>
-</p>*@
+</form>*@ @*pole vaja create hetkel*@
 <table class="table table-striped">
     <thead>
         <tr>
