--- a/Soft/Pages/Shared/_DetailsStudent.cshtml
+++ b/Soft/Pages/Shared/_DetailsStudent.cshtml
@@ -31,7 +31,7 @@
 
             @RenderBody()
 
-            <input id="createButton" type="submit" value="Create" class="btn btn-primary" />
+            <input id="createButton" type="submit" value="Register" class="btn btn-primary" />
         </form>
     </div>
 </div>
