--- a/Soft/Pages/Shared/_Layout.cshtml
+++ b/Soft/Pages/Shared/_Layout.cshtml
@@ -40,8 +40,7 @@
                              new Link("Courses", new Uri("/Student/Courses/Index?handler=index", UriKind.Relative)),
                              new Link("Exams", new Uri("/Student/Exams/Index?handler=index", UriKind.Relative)),
                              new Link("Driving practice reservation", new Uri("/Student/DrivingPractices/Index?handler=index", UriKind.Relative)),
-                             new Link("Teachers Info", new Uri("/Student/Teachers/Index?handler=index", UriKind.Relative)),
-                             new Link("My Data", new Uri("/Student/Students/Index?handler=index", UriKind.Relative))
+                             new Link("Teachers Info", new Uri("/Student/Teachers/Index?handler=index", UriKind.Relative))
                              )
                     </ul>
                     <partial name="_LoginPartial" />
