--- a/Soft/Areas/Administrator/Pages/RegisterExam/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/RegisterExam/Index.cshtml
@@ -13,4 +13,4 @@
     @Html.Link(string.Empty, new Link(Captions.Create, Model.CreateUrl))
 }
 
-@Html.ShowTable(Model)
+@Html.ShowTable(Model, null, null, null)
