Pages testid + contextSeed testid

--- a/Soft/Areas/Administrator/Pages/RegisterDrivingPractice/Index.cshtml
+++ b/Soft/Areas/Administrator/Pages/RegisterDrivingPractice/Index.cshtml
@@ -9,8 +9,6 @@
     var page = Model.PageUrl;
 }
 
-@section Create {
-    @Html.Link(string.Empty, new Link(Captions.Create, Model.CreateUrl))
-}
+@section Create {}
 
 @Html.ShowTable(Model,null, null, null)
