--- a/Soft/Areas/Administrator/Pages/UserRoles/Manage.cshtml
+++ b/Soft/Areas/Administrator/Pages/UserRoles/Manage.cshtml
@@ -13,7 +13,7 @@
             1=Student, 2=Teacher, 3=Administrator, 4=SuperAdmin
         </div>
         <div class="card-body">
-            @foreach (var role in Model.UserRolesList)
+            @foreach (var role in Model.userRolesList)
             {
                 <div class="form-check m-1">
                     <input type="hidden" asp-for=@role.RoleId />
